[package]
name = "crunchy-vdf"
version = "0.1.0"
authors = ["Magnus Larsen <golgothasTerror101@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = ["parallel", "include_macro"]
parallel = ["rayon"]
evaluate_conditionals = [] #TODO: evaluate_conditionals
escape_sequences = [] #TODO: fix escape_sequences
include_macro = [] #TODO: include_macro
base_macro = [] #TODO: base_macro

[dependencies]
jemallocator = "0.3.2"
nom = "5.1.2"
rayon = { version = "1.3.1", optional = true }

